2011-02-14 Fred Kiefer <FredKiefer@gmx.de>

	* Source/NSCursor.m,
	* Source/GSDragView.m,
	* Source/GSMemoryPanel.m: Fix Use-after-release found by static analyser.

2011-02-10 German Arias <german@xelalug.org>

	* Source/GSGormLoader.m (+initialize): Load the app icon here, at launch
	time, since GSGormLoader is initialized before call -finishLaunching
	in NSApp (In non document-based apps that load a gorm file at launch).
	So the windows and panels at initial gorm file don't show the app
	icon (bug #31039).

2011-02-10 German Arias <german@xelalug.org>

	* Source/GSGormLoading.m (-awakeWithContext:): Call directly the method
	-orderFront: on visible windows, since this works fine here, instead
	put these windows into _inactive list. This solve the problem of menu
	in window in non document-based apps and the problem with the outlet
	"initialFirstResponder" on gorm files.

2011-02-09 Fred Kiefer <FredKiefer@gmx.de>

	* Source/GSInfoPanel.m,
	* Source/GSTextStorage.m,
	* Source/GSThemeInspector.m,
	* Source/NSBrowser.m,
	* Source/NSImage.m,
	* Source/NSMenuView.m,
	* Source/NSPageLayout.m,
	* Source/NSSpellChecker.m,
	* Source/NSStringDrawing.m,
	* Source/NSTableHeaderView.m,
	* Source/NSTableView.m,
	* Source/NSWindow.m,
	* Tools/gclose.m,
	* Tools/make_services.m: Remove dead assignments found by static code analysis.

2011-02-09  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSEvent.m: Avoid unneccessary creation/destruction of NSDate
	instances during periodic events.

2011-02-08 Riccardo Mottola <rm@gnu.org>

	* Source/NSBitmapImageRep+PNG.m:
	Tweak png.h header order to avoid problems on some systems.

2011-02-08 Riccardo Mottola <rm@gnu.org>

	* Source/NSBitmapImageRep+PNG.m:
	Cleaned up includes so that compilation without PNG works again.

	* configure.ac:
	Use libpng-config to determine the correct includes and libraries.

	* configure: regenerated.

2011-02-07 Fred Kiefer <FredKiefer@gmx.de>

	* Printing/*: Clean up all the header includes.
